--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,10 +107,10 @@ h6 {
 }
 
 #header .profile .social-links a {
-  font-size: 18px;
+  font-size: 15px;
   display: inline-block;
   background: #212431;
-  color: #fff;
+  color: #a8a9b4;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
