--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,11 @@ body {
 
 a {
   color: #149ddd;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:hover {
-  color: #37b3ed;
+  background-color: yellow;
   text-decoration: none;
 }
 
@@ -240,7 +240,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: 130vh;
   background: url("../img/bg_new.jpg") top center;
   background-size: cover;
 }
@@ -249,6 +249,7 @@ h6 {
   content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
+  height: 130vh;
   bottom: 0;
   top: 0;
   left: 0;
@@ -267,21 +268,39 @@ h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  /* color: #fff; */
+  color: rgba(255, 255, 255, 0.5);
 }
 
 #hero p {
-  color: #fff;
+  /* color: #fff; */
+  color: rgba(255, 255, 255, 0.5);
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  color: #fff;
+  color: rgba(255, 255, 255, 1);
   padding-bottom: 4px;
   letter-spacing: 1px;
   border-bottom: 3px solid #149ddd;
+}
+
+#hero p span_1 {
+  color: rgba(255, 255, 255, 1);
+  padding-bottom: 4px;
+  letter-spacing: 1px;
+}
+
+#hero a {
+  color: white;
+  text-decoration: underline;
+}
+
+#hero a:hover {
+  color: #040b14;
+  background-color: yellow;
 }
 
 @media (min-width: 1024px) {
